adding infra ecrypt flag

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ example/.terraform.lock.hcl
 example/.terraform/modules/modules.json
 example/.terraform/providers/registry.terraform.io/hashicorp/azurerm/3.72.0/darwin_amd64/terraform-provider-azurerm_v3.72.0_x5
 example/terraform.tfstate
+.terraform.lock.hcl
+.terraform.tfstate.lock.info
+.terraform/providers/registry.terraform.io/hashicorp/azurerm/3.72.0/darwin_amd64/terraform-provider-azurerm_v3.72.0_x5
